--- a/app/invoicecreation/webapp/manifest.json
+++ b/app/invoicecreation/webapp/manifest.json
@@ -118,7 +118,7 @@
 					"targetControl": "appId",
           "subroutes": [
 						{
-							"pattern": "detail/:UnitCode:/:PoNum:/:MRNnumber:/:AddressCode:/:Status:",
+							"pattern": "detail/:UnitCode:/:PoNum:/:MRNnumber:/:AddressCode:",
 							"name": "ASNReportDetail",
 							"view": "ASNReportDetail",
 							"targetAggregation": "pages"
