--- a/app/invoicecreation/webapp/manifest.json
+++ b/app/invoicecreation/webapp/manifest.json
@@ -118,7 +118,7 @@
 					"targetControl": "appId",
           "subroutes": [
 						{
-							"pattern": "detail/{UnitCode}/{PoNum}/{MRNnumber}/{AddressCode}",
+							"pattern": "detail/{UnitCode}/{PoNum}/{MRNnumber}/{AddressCode}/:SendToAccDate:/:TillDatePurchaseVal:/:DedTds:/:TotalDebit:/:TotalCredit:/:VoucherType:/:AccCode:/:AccDesc:/:ReceiptDate:",
 							"name": "ASNReportDetail",
 							"view": "ASNReportDetail",
 							"targetAggregation": "pages"
