--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "license": "UNLICENSED",
     "private": true,
     "dependencies": {
+        "@sap-cloud-sdk/http-client": "^3.14.0",
+        "@sap-cloud-sdk/resilience": "^3.14.0",
         "@sap/cds": "^7",
         "@sap/cds-hana": "^2",
         "@sap/cds-odata-v2-adapter-proxy": "^1.9.21",
@@ -30,9 +32,12 @@
     },
     "cds": {
         "requires": {
-            "[production]": {
-                "db": "hana",
-                "auth": "xsuaa"
+            "db": "hana",
+            "Legacy": {
+                "kind": "rest",
+                "credentials": {
+                    "url": "https://imperialauto.co:84/IAIAPI.asmx/"
+                }
             }
         }
     }
