--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
             "Legacy": {
                 "kind": "rest",
                 "credentials": {
-                    "url": "https://imperialauto.co:84/IAIAPI.asmx/"
+                    "url": "https://iaierp.com:84/iaiapi.asmx/"
                 }
             }
         }
